Bug fix, url early wrap

--- a/frontend/public/App.css
+++ b/frontend/public/App.css
@@ -315,7 +315,7 @@ body {
   color: #3b3b3b;
   font-size: 1.1rem;
   word-wrap: break-word;
-  max-width: 70%;
+  width: 70%;
 }
 
 .url-card .urls-cont {
@@ -327,7 +327,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   word-wrap: break-word;
-  max-width: 70%;
+  width: 70%;
 }
 
 .url-card .urls-cont p {
@@ -367,11 +367,9 @@ body {
   .url-card p {
     font-size: 1.2rem;
     width: 100%;
-    max-width: 100%;
   }
   .url-card .urls-cont {
     width: 100%;
-    max-width: 100%;
   }
   .url-card .urls-cont p {
     font-size: 1.2rem;
